# pytorch-cpp-template

./: README.md  install_bazel.sh  install_cmake.sh
.github/workflows/: bazel_build.yaml  build.yaml  cmake_build.yaml
bazel/: .bazelrc  .gitignore  BUILD  README.md  WORKSPACE  libtorch_cpu.BUILD
cmake/: CMakeLists.txt  OLDCMakeLists.txt  README.md
cmake/.devcontainer/: devcontainer.json
